infra/k8s/admincourse-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admincourse-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admincourse
  template:
    metadata:
      labels:
        app: admincourse
    spec:
      containers:
        - name: admincourse
          image: denodenojan/admincourse
---
apiVersion: v1
kind: Service
metadata:
  name: admincourse-srv
spec:
  selector:
    app: admincourse
  ports:
    - name: admincourse
      protocol: TCP
      port: 4000
      targetPort: 4000
