infra/k8s/adminprofile-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminprofile-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminprofile
  template:
    metadata:
      labels:
        app: adminprofile
    spec:
      containers:
        - name: adminprofile
          image: denodenojan/adminprofile
---
apiVersion: v1
kind: Service
metadata:
  name: adminprofile-srv
spec:
  selector:
    app: adminprofile
  ports:
    - name: adminprofile
      protocol: TCP
      port: 4000
      targetPort: 4000
