infra/k8s/adminstatistic-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminstatistic-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminstatistic
  template:
    metadata:
      labels:
        app: adminstatistic
    spec:
      containers:
        - name: adminstatistic
          image: denodenojan/adminstatistic
---
apiVersion: v1
kind: Service
metadata:
  name: adminstatistic-srv
spec:
  selector:
    app: adminstatistic
  ports:
    - name: adminstatistic
      protocol: TCP
      port: 4000
      targetPort: 4000
