infra/k8s/learner-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learner
  template:
    metadata:
      labels:
        app: learner
    spec:
      containers:
        - name: learner
          image: sandarujayathilaka98425/learner
---
apiVersion: v1
kind: Service
metadata:
  name: learner-srv
spec:
  selector:
    app: learner
  ports:
    - name: learner
      protocol: TCP
      port: 4000
      targetPort: 4000
