infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: udemy.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-srv
                port:
                  number: 4000
          - path: /api/courses/?(.*)
            pathType: Prefix
            backend:
              service:
                name: courses-srv
                port:
                  number: 4000
<<<<<<< HEAD
          - path: /api/reviews/?(.*)
            pathType: Prefix
            backend:
              service:
                name: reviews-srv
                port:
                  number: 4000
=======
          - path: /api/learner/?(.*)
            pathType: Prefix
            backend:
              service:
                name: learner-srv
                port:
                  number: 4000
          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 4000
          - path: /api/cart/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cart-srv
                port:
                  number: 4000
       

              


>>>>>>> deploy
